--- a/assets/views/footer.html
+++ b/assets/views/footer.html
@@ -1,13 +1,13 @@
 <div class="footer p-sm-5">
     <div class="container">
         <div class="row">
+
             <div class="col-sm-6">
+                <h3>Paquetería desde<br>USA alatinoamérica</h3>
                 <ul class="list-group">
-                    <li >An item</li>
-                    <li >A second item</li>
-                    <li >A third item</li>
-                    <li >A fourth item</li>
-                    <li >And a fifth one</li>
+                    <li ><img src="assets/img/colombia_64.png" alt="Flag Colombia" title="Bander de Colombia">Colombia</li>
+                    <li> <img src="assets/img/mexico_64.png" alt="Flag México" title="Bander de México">México</li>
+                    <li> <img src="assets/img/venezuela_64.png" alt="Flag Venezuela" title="Bander de Venezuela">Venezuela</li>
                 </ul>
             </div>
             <div class="col-sm-6">
