--- a/assets/views/header.html
+++ b/assets/views/header.html
@@ -42,10 +42,10 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Tarifas de envío</a>
+            <a class="nav-link" href="#rates">Tarifas de envío</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contacto</a>
+            <a class="nav-link" href="#location">Contacto</a>
           </li>
           
         </ul>
