--- a/assets/views/index.html
+++ b/assets/views/index.html
@@ -82,36 +82,34 @@
 </div>
 
 
-<div class="rates">
+<div id="rates" class="rates">
   <div class="container">
-    <h2>Tarifas de envío de dinero o carga desde New York a Latinoamérica</h2>
+    <div class="text-center">
+      <svg xmlns="http://www.w3.org/2000/svg" width="100" height="40" fill="currentColor" class="bi bi-chevron-compact-down" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M1.553 6.776a.5.5 0 0 1 .67-.223L8 9.44l5.776-2.888a.5.5 0 1 1 .448.894l-6 3a.5.5 0 0 1-.448 0l-6-3a.5.5 0 0 1-.223-.67z"/>
+      </svg>
+      <h2>Tarifas de envío de dinero o carga desde New York a Latinoamérica</h2>
+    </div>
+    
     <div class="rates_table">
       <table class="table table-hover">
         <thead>
       <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
+        <th scope="col">País</th>
+        <th scope="col">Envía 1USD / Recibe</th>
+        <th scope="col">Carga(xlibra)</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
+        <td><img src="assets/img/colombia_64.png" alt="Flag Colombia" title="Bander de Colombia">Colombia</td>
+        <td>$4900COP</td>
+        <td>$1.70USD</td>
       </tr>
       <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td colspan="2">Larry the Bird</td>
-        <td>@twitter</td>
+        <td><img src="assets/img/mexico_64.png" alt="Flag México" title="Bander de México">México</td>
+        <td >$19.91MXN</td>
+        <td>$2.00USD</td>
       </tr>
     </tbody>
   
@@ -123,15 +121,53 @@
 <div class="featured bg-mlny">
   <div class="featured_container">
     <h3>Si necesitas una asesoría rápida para enviar tu carga, para hacer una recarga a cualquier parte del mundo o enviar dinero, comunícate con nosotros</h3>
-    <input type="button" value="Contacto Directo" class="btn btn-danger">
+    <a class="btn btn-mlny-green" href="https://wa.me/19293201400?text=Me%20gustar%C3%ADa%20saber%20m%C3%A1s%20sobre%20env%C3%ADos%20a" alt="Contacto directo multilatino" title="Contacto directo multilatino" >Contacto Directo </a>
   </div>
 </div>
 
-<div class="location ">
+<div id="location" class="location ">
   <div class="container">
     <div class="row">
       <div class="col-sm-6">
-        <h3>¡Hacemos envíos muy cerca de ti!</h3>
+        <h3><b> ¡Hacemos envíos muy cerca de ti!</b></h3>
+        <hr>
+        <p>
+          <span class="text-danger">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-pin-fill" viewBox="0 0 16 16">
+              <path d="M4.146.146A.5.5 0 0 1 4.5 0h7a.5.5 0 0 1 .5.5c0 .68-.342 1.174-.646 1.479-.126.125-.25.224-.354.298v4.431l.078.048c.203.127.476.314.751.555C12.36 7.775 13 8.527 13 9.5a.5.5 0 0 1-.5.5h-4v4.5c0 .276-.224 1.5-.5 1.5s-.5-1.224-.5-1.5V10h-4a.5.5 0 0 1-.5-.5c0-.973.64-1.725 1.17-2.189A5.921 5.921 0 0 1 5 6.708V2.277a2.77 2.77 0 0 1-.354-.298C4.342 1.674 4 1.179 4 .5a.5.5 0 0 1 .146-.354z"/>
+            </svg>
+          </span>
+           <b>Address :</b>
+           8442 Grand Ave, Queens, NY 11373, Estados Unidos</p>
+          <p>
+            <span class="text-primary">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-phone-fill" viewBox="0 0 16 16">
+                <path d="M3 2a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V2zm6 11a1 1 0 1 0-2 0 1 1 0 0 0 2 0z"/>
+              </svg>
+            </span>
+            <b>Phone:</b>
+            +1 929 320 1400
+          </p>
+          <!--<p>
+            <span class="">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-messenger" viewBox="0 0 16 16">
+                <path d="M0 7.76C0 3.301 3.493 0 8 0s8 3.301 8 7.76-3.493 7.76-8 7.76c-.81 0-1.586-.107-2.316-.307a.639.639 0 0 0-.427.03l-1.588.702a.64.64 0 0 1-.898-.566l-.044-1.423a.639.639 0 0 0-.215-.456C.956 12.108 0 10.092 0 7.76zm5.546-1.459-2.35 3.728c-.225.358.214.761.551.506l2.525-1.916a.48.48 0 0 1 .578-.002l1.869 1.402a1.2 1.2 0 0 0 1.735-.32l2.35-3.728c.226-.358-.214-.761-.551-.506L9.728 7.381a.48.48 0 0 1-.578.002L7.281 5.98a1.2 1.2 0 0 0-1.735.32z"/>
+              </svg>
+            </span>
+            <b>Email : </b>
+            multilatinony@gmail.com
+          </p>
+        -->
+          <p>
+            <span class="text-success">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chat-right-fill" viewBox="0 0 16 16">
+                <path d="M14 0a2 2 0 0 1 2 2v12.793a.5.5 0 0 1-.854.353l-2.853-2.853a1 1 0 0 0-.707-.293H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12z"/>
+              </svg>
+            </span>
+            <b>Email : </b>
+            multilatinony@gmail.com
+          </p>
+
       </div>
       <div class="col-sm-6 ">
         <iframe
