add social network

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,6 +134,17 @@ h2{
   height: 30px;
 }
 
+
+.footer_networks a{
+  color: #eee;
+  text-decoration: none;
+}
+
+.footer_networks img{
+  height: 20px;
+  width: 20px;
+}
+
 .rates_table{
   padding: 20px;
 }
