--- a/assets/views/footer.html
+++ b/assets/views/footer.html
@@ -2,16 +2,28 @@
     <div class="container">
         <div class="row">
 
-            <div class="col-sm-6">
-                <h3>Paquetería desde<br>USA alatinoamérica</h3>
+            <div class="col-sm-4">
+                <h3><b>Paquetería desde<br>USA alatinoamérica</b></h3>
                 <ul class="list-group">
                     <li ><img src="assets/img/colombia_64.png" alt="Flag Colombia" title="Bander de Colombia">Colombia</li>
                     <li> <img src="assets/img/mexico_64.png" alt="Flag México" title="Bander de México">México</li>
                     <li> <img src="assets/img/venezuela_64.png" alt="Flag Venezuela" title="Bander de Venezuela">Venezuela</li>
                 </ul>
             </div>
-            <div class="col-sm-6">
-    
+            <div class="col-sm-4 footer_networks">
+                <h3><b>Síguenos en nuestras<br> redes sociales</b></h3>
+                <ul class="list-group">
+                    <li >
+                        <a href="https://www.facebook.com/MultilatinoNY/" target="_blank" alt="Link Facebook" title="Link Facebook">
+                        <img src="assets/img/icon_facebook.png" alt="Facebook" title="Síguenos en Facebook"> Facebook
+                        </a>
+                    </li>
+                    <li> 
+                        <a href="https://www.instagram.com/multilatinony/" target="_blank" alt="Link Instagram" title="Link Instagram">
+                        <img src="assets/img/icon_instagram.png" alt="Instagram" title="Síguenos en Instagram"> Instagram
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
