--- a/assets/views/header.html
+++ b/assets/views/header.html
@@ -29,7 +29,7 @@
   
   <nav class="navbar navbar-expand-lg bg-mlny">
     <div class="container">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/">
         <img class="img-logo" src="assets/img/logo_multilatino.png" alt="Logo Multilatino">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -39,7 +39,7 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#rates">Tarifas de envío</a>
